2009-04-06  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 438696 - Error
	  in text editor extension chain.".

2009-04-03  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Implemented "Bug 325527 -
	  Make C# intellisense smarted for base classes".

2009-04-03  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs:
	* Gui/MemberCompletionData.cs:
	* Gui/NRefactoryParameterDataProvider.cs: Added some tooltip
	  formatting. Extension methods are marked. Method description
	  is shown in the parameter window.

2009-04-02  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs:
	* Gui/NRefactoryResolver.cs: Fixed "Bug 491020 - Wrong typeof
	  intellisense".

2009-04-02  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs:
	* Gui/NRefactoryResolver.cs: Fixed "Bug 491017 - No
	  intellisense for static LINQ queries".

2009-04-02  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: Fixed failing unit test.

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: removed debug messages.

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 491016 - No
	  intellisense for lambdas inside linq query".

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Added "var" to the
	  completion list.

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 487226 - No
	  intellisense in LINQ queries" - 2.

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 487237 - Broken lambda
	  intellisense".

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 487226 - No
	  intellisense in LINQ queries".

2009-03-31  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Worked on C#3 lambda resolving.

2009-03-30  Mike Krüger  <mkrueger@novell.com>
