@@ -1,5 +1,11 @@
 2009-04-06  Mike Krüger  <mkrueger@novell.com>
 
+	* Parser/CodeGenerator.cs:
+	* Gui/NRefactoryResolver.cs: Added "resolve namespace"
+	  feature.
+
+2009-04-06  Mike Krüger  <mkrueger@novell.com>
+
 	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 438696 - Error
 	  in text editor extension chain.".
 
